# tryiter

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: ext.rs  lib.rs  try_peekable.rs
tests/: sanity.rs
