[package]
name = "tryiter"
version = "0.3.0"
edition = "2021"
authors = ["Carl Sverre"]
description = "Utility functions for Iterators of Results"
repository = "https://github.com/carlsverre/tryiter"
license = "MIT OR Apache-2.0"
keywords = ["iterator", "result", "try", "extension", "trait"]
readme = "README.md"

[dependencies]
